--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,58 @@
-/* Para Todas As Paginas */
-body{
+﻿body{
 	font-family: Arial;
 	padding: 0;
 	margin:0;
 }
-
-nav{
-	margin-top:0;
-	padding-top:0.45%;
-	padding-bottom:0.45%;
-	width:100%;
+	
+header{
+	text-align:center;
+}
+	
+.menu ul{
+	margin:0;
+	padding:0;
+	list-style:none;
+	position:relative;
+}
+.menu ul li{
+	margin-bottom:3%;
 	background:#0098DA;
+	width:100%;
 }
 
-ul{
-	padding-left:23vw;
-}
-
-li{
-	margin-left:4vw;
-	display:inline;
-}
-
-a{
-	font-weight:bolder;
+.menu a{
+	font-size:150%;
+	font-weight:bold;
+	padding:2%;
+	display:block;
 	text-decoration:none;
-	font-size:200%;
+	text-align:center;
 	color:white;
 }
-
-a:hover{
-	color:black;
+.menu ul li ul li a{
+	background:none; 
+}
+.menu ul ul li{
+	float:none;
 }
 
-h1, h2, footer, header{
+.menu ul li ul{
+	background:#0098DA;
+	font-size:75%;
+	display:none;
+	border-radius:0 0 15px 15px;
+	margin-bottom:3%;
+}
+
+.menu ul li:hover ul{
+	display:block;
+}
+
+.menu a:hover{
+	color:black;
+}
+h1, h2, footer{
+	margin-top:25px;
 	text-align:center;
 }
 
@@ -45,8 +64,12 @@ main p, div p, article p{
 }
 
 main p, div p{
-	margin-left:23%;
-	margin-right:23%;
+	margin-left:10%;
+	margin-right:10%;
+}
+
+div p{
+	margin-top:27%;
 }
 
 /* Pagina Portugues */
@@ -61,34 +84,6 @@ main > article:nth-child(2){
 }
 /* Fim - Pagina Portugues */
 
-/* Dropdown */
-ul li:hover ul, ul li ul li:hover ul, ul li.over ul, ul li ul li.over ul{
-	display:block;
-	z-index:1;
-}
-
-li ul{
-	display:none;
-	min-width:19.75vw;
-	min-height:31vh;
-	padding-left:1.5vw;
-	padding-top:1.5vh;
-	position:absolute;
-	background:#0098DA;
-	border-radius:0 0 15px 15px;
-}
-
-li ul li{
-	text-align:center;
-	margin-left:0;
-	display:block;	
-}
-
-li ul li a{
-	font-size:155%;
-}
-/* Fim - Dropdown */
-/* Fim - Para Todas As Paginas */
 div div{
 	text-align:center;
 	margin-bottom:1.5%;
@@ -96,16 +91,17 @@ div div{
 
 #main img, div div img{
 	border:3px solid darkgray;
-	border-radius:35px 35px 35px 35px;
-	max-height:20vh;
-	max-width:10vw;
+	border-radius:20px 20px 20px 20px;
+	width:25vw;
+	max-width:30vw;
 }
 #main{
-	margin-top:1.5%;
-	padding-left:3vw;
+	margin-left:20vw;
+	margin-right:10vw;
+	margin-top:5%;
 	display:grid;
-	grid-template-areas: "professor1 professor2 professor3 professor4 professor5 professor6 professor7";
-	grid-template-rows: 10vh 13.5vh; /* Perguntar qual é top bottom left right */
+	grid-template-areas: "professor1 professor2" "professor3 professor4" "professor5 professor6" "professor7 professor7";
+	grid-template-rows: 32% 32% 32%;
 }
 
 #main img:hover{
@@ -144,6 +140,7 @@ div div{
 /* Pagina Algoritmo - E Primeira Parte De Bases também*/
 
 main section img{
+	max-width:80%;
 	margin-bottom:2.5%;
 	border:3px solid gray;
 	border-radius:5px 5px 5px 5px;
@@ -180,7 +177,7 @@ main section h2{
 
 /* Efeito Para Usar Com O JQuery*/
 .imagembordaClara{
-	border:0.5vh solid gray;
+	border:2.5px solid gray;
 }
 
 .zoom {
@@ -189,7 +186,7 @@ main section h2{
 	-moz-transition: all 0.3s;
 	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
-	-moz-transform:scale(1.3);
+	-moz-transform: scale(1.3);
 	-webkit-transform: scale(1.3);
 	transform: scale (1.3);
 }
@@ -203,11 +200,6 @@ footer {
 	width:100%;
 	background:#0098DA;
 	clear:both;
-}
-
-footer.pouco_conteudo{
-	bottom:0;
-	position:fixed;
 }
 
 /* Efeito arco iris */
@@ -224,6 +216,71 @@ footer.pouco_conteudo{
     background-image: -o-linear-gradient(left,#ea8711,#d96363,#73a6df,#9085fb,#52ca79);
 }
 
-.hover { display: none; }
-.mudar:hover .portugues { display: none; }
-.mudar:hover .hover { display: block; }
+.botoesDasBandeiras{
+	text-align:center;
+}
+.botoesDasBandeiras img{
+	margin-top:3%;
+	border-radius:10px 10px 10px 10px;
+}
+
+.botoesDasBandeiras p{
+	margin-top:5%;
+}
+
+@media screen and (min-width: 769px){
+	.menu {
+		z-index:5;
+		position:sticky;
+		top:0;
+		height:70px;
+		background-color:#0098DA;
+	}
+	
+	.menu ul{
+		margin:0;
+		padding:0;
+		list-style:none;
+		position:relative;
+		text-align:center;
+	}
+	.menu ul li{
+		display: inline-block;
+		margin-bottom:0;
+		background:none;
+		width:175px;
+	}
+	.menu a{
+		padding:10%;
+	}
+	.menu ul li ul{
+		position:absolute;
+	}
+		
+	div p, main p{
+		margin-top:3%;
+		margin-left:20%;
+		margin-right:20%;
+	}
+	
+	#main img, div div img{
+		border:3px solid darkgray;
+		border-radius:20px 20px 20px 20px;
+		width:10vw;
+		max-width:20vw;
+	}
+	
+	#main{
+		margin-left:8vw;
+		margin-right:7vw;
+		margin-top:5%;
+		display:grid;
+		grid-template-areas: "professor1 professor2 professor3 professor4 professor5 professor6 professor7 professor7";
+		grid-template-rows: 32%;
+	}
+	
+	.footerPc{
+		position:fixed;
+		bottom:0;
+	}
+}
